hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/splice_err3.php.exp
File "splice_err3.php", line 13, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 237, characters 26-35:
  Expected `ExampleInt`
  File "splice_err3.php", line 7, characters 10-28:
  But got `TInfer#1 = ExampleString`
  File "expr_tree.hhi", line 25, characters 47-52:
    via this generic `TInfer`
