hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/splice_err3.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(bool $z): void {
  if ($z) {
    $x = ExampleDsl`'Hello'`;
  } else {
    $x = ExampleDsl`4`;
  }

  // Inferred type needs to be compatible
  $y = ExampleDsl`4 + ${$x}`;
}
